<resources>
    <string name="app_name">Gundelik</string>
    <string name="edit_text_hint1">Email</string>
    <string name="edit_text_hint2">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="havent_account_register">New here? Register</string>
    <string name="sign_in_text">Login</string>
    <string name="register_text">Register</string>
    <string name="email_verification_text">Waiting for Email verification…</string>
    <string name="verified">Next</string>
    <string name="informations">Informations</string>
    <string name="edit_text_hint3">First Name</string>
    <string name="edit_text_hint4">Last Name</string>
    <string name="edit_text_hint5">Birthday</string>
    <string name="day_of_birth">Enter your date of birth</string>
    <string name="save">Save</string>
    <string name="java1">Please fill the inputs correctly!</string>
    <string name="java2">Please use password with at least 6 symbols!</string>
    <string name="java3">Please use correct Email!</string>
    <string name="java4">Error</string>
    <string name="java5">Something went wrong,please try again later,or contact to Developers.</string>
    <string name="java6">Please fill that field!</string>
    <string name="java7">Passwords are not same!</string>
    <string name="java8">The Email that you used to register is already registered, please log-in with it..</string>
    <string name="java9">This Email already registired!</string>
    <string name="java10">Please click BACK again to exit</string>
    <string name="java11">You are not Verified!</string>
    <string name="java12">We have detected that you are not verified,try again!</string>
    <string name="java13">Try Again</string>
    <string name="java14">Email or password is wrong!</string>
    <string name="java15">Use only numbers!</string>
    <string name="java16">Please accept the confirmation sent to your new email address.</string>
    <string name="java17">Please use at least 6 symbols!</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_search">Search</string>
    <string name="menu_groups">Groups</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile_info">Information</string>
    <string name="profile_loading">Loading…</string>
    <string name="profile_log_out">Log out</string>
    <string name="search_with_id">Search with id</string>
    <string name="search_fragment_search">Search</string>
    <string name="profile_settings_label">Settings</string>
    <string name="back_to_profile">Back to profile</string>
    <string name="search_fragment_seterror1">Please give an ID to search!</string>
    <string name="search_fragment_seterror2">ID can not start with 0!</string>
    <string name="search_fragment_seterror3">We couldn\'t find any user with this ID!</string>
    <string name="change_name">Change Name</string>
    <string name="change_birthday">Change Birthday</string>
    <string name="change_saved">Saved!</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="not_same_pass">Passwords are not same!</string>
    <string name="wrong_pass">Wrong password!</string>
    <string name="failed">Failed</string>
    <string name="password_cant_be_same">New password and old one can not be same!</string>
    <string name="groups">Groups</string>
    <string name="creat_group">Creat group</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group descripton (Optional)</string>
    <string name="add_members">Add memeber</string>
    <string name="delete_members">Delete memeber</string>
    <string name="creat_group_cancel_button">Cancel</string>
</resources>