<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="78dp"
        android:text="@string/sign_in_text"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/outlinedTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="320dp"
        android:hint="@string/edit_text_hint1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LoginEmailEditText"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="254"
            android:scrollHorizontally="true"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_hint2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LogInPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:maxLength="30"
            android:scrollHorizontally="true"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LogInMaterialButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:hint="@string/log_in"
        android:textColorHint="@color/white"
        android:textSize="17sp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextField2"
        app:layout_constraintVertical_bias="0.694" />

    <TextView
        android:id="@+id/OpenRegister"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginStart="90dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="67dp"
        android:text="@string/havent_account_register"
        android:textColor="#1367B9"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogInMaterialButton"
        android:onClick="Register_OnClick"/>


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.390" />

</androidx.constraintlayout.widget.ConstraintLayout>